# CCweb

./: .gitignore  Cargo.toml  README.md  request.txt
client/: Cargo.toml
client/src/: main.rs
server/src/: main.rs  server.rs  user.rs
src/: index.html  main.rs  server.rs  user.rs
