[package]
name = "CCweb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2", features = ["v4"] }
bcrypt = "0.15.1"
axum = "0.7.5"
dotenv = "0.15.0"
serde_json = "1.0.120"

